Organisation en dossiers

--- a/pages/menu3.html
+++ b/pages/menu3.html
@@ -20,13 +20,13 @@
             </div>
         </a>
         <div id="header-logo">
-            <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+            <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
             </div>
     </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="Maquettes Ohmyfood\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+        <img src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
@@ -44,7 +44,7 @@
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
-                <div id="borderbottom"></div>
+                <div class="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--1">
                     <div class="container-name">
@@ -86,7 +86,7 @@
             <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
                 <h4>PLATS</h4>
-                <div id="borderbottom"></div>
+                <div class="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--4">
                     <div class="container-name">
@@ -128,7 +128,7 @@
             <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
                 <h4>DESSERTS</h4>
-                <div id="borderbottom"></div>
+                <div class="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--7">
                     <div class="container-name">
@@ -172,7 +172,7 @@
         </div>
     </main>
     <footer>
-        <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
+        <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
