--- a/pages/menu4.html
+++ b/pages/menu4.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
@@ -8,32 +7,30 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - La palette du goût</title>
+    <title>OhMyFood - </title>
 </head>
-
 <body>
     <header>
         <div class="menu-header">
-            <a href="index.html">
-                <div class="backarrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-            </a>
-            <div id="header-logo">
-                <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
-                </div>
-        </div>
+        <a href="index.html">
+            <div class="backarrow">
+                <i class="fa-solid fa-arrow-left"></i>
+            </div>
+        </a>
+        <div id="header-logo">
+            <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
+            </div>
+    </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-            <img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
-                <h1>La palette du goût</h1>
+                <h1>Le délice des sens</h1>
                 <div class="hearts">
                 <div class="heartbase__menu">
                 <i class="fa-regular fa-heart"></i>
@@ -46,14 +43,13 @@
             <div class="menu-section--wrapper">
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
-                    <h4>ENTREES</h4>
-                    <div id="borderbottom"></div>
+                <h4>ENTREES</h4>
+                <div class="borderbottom"></div>
                 </div>
-
                 <div class="menu-item menu-item--1">
                     <div class="container-name">
-                        <p class="item-name">Fricassée d'escargot</p>
-                        <p>Au piment d'Espelette </p>
+                    <p class="item-name"><b>Tartare de thon</b></p>
+                    <p>Assaisonné au yuzu</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">25€</p>
@@ -62,12 +58,10 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                
                 <div class="menu-item menu-item--2">
-
                     <div class="container-name">
-                        <p class="item-name">Foie gras de canard mi-cuit</p>
-                        <p>Et ses copeaux de truffe noire</p>
+                    <p class="item-name"><b>Bouchée de homard croustillant </b></p>
+                    <p>Et sa farandole de petits légumes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -77,10 +71,9 @@
                     </div>
                 </div>
                 <div class="menu-item menu-item--3">
-
                     <div class="container-name">
-                        <p class="item-name">Oeuf au plat</p>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <p class="item-name"><b>Velouté de cèpes </b></p>
+                    <p>Aux truffes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">20€</p>
@@ -92,14 +85,13 @@
             </div>
             <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
-                    <h4>PLATS</h4>
-                    <div id="borderbottom"></div>
+                <h4>PLATS</h4>
+                <div class="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--4">
-
                     <div class="container-name">
-                        <p class="item-name">Filet de boeuf aux herbes</p>
-                        <p>Accompagné de sa ribambelle de légumes</p>
+                    <p class="item-name"><b>Poulet rôti aux herbes de Provence</b></p>
+                    <p>Et sa crème de truffe</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">40€</p>
@@ -109,10 +101,9 @@
                     </div>
                 </div>
                 <div class="menu-item menu-item--5">
-
                     <div class="container-name">
-                        <p class="item-name">Parmentier de queue de boeuf</p>
-                        <p>À la truffe noire sur sa purée de panais</p>
+                    <p class="item-name"><b>Langouste rôtie</b></p>
+                    <p>Et ses légumes de saison</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -122,10 +113,9 @@
                     </div>
                 </div>
                 <div class="menu-item menu-item--6">
-
                     <div class="container-name">
-                        <p class="item-name">Filet de turbot</p>
-                        <p>Aux agrumes</p>
+                    <p class="item-name"><b>Côte de boeuf Angus</b></p>
+                    <p>Et sa purée de panais</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
@@ -137,14 +127,13 @@
             </div>
             <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
-                    <h4>DESSERTS</h4>
-                    <div id="borderbottom"></div>
+                <h4>DESSERTS</h4>
+                <div class="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--7">
-
                     <div class="container-name">
-                        <p class="item-name">Paris-Brest</p>
-                        <p>Revisité</p>
+                    <p class="item-name"><b>Farandole de desserts</b></p>
+                    <p>Du chef</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">18€</p>
@@ -154,10 +143,9 @@
                     </div>
                 </div>
                 <div class="menu-item menu-item--8">
-
                     <div class="container-name">
-                        <p class="item-name">Macaron au chocolat d'exception </p>
-                        <p>Et glace à la vanille de Madagascar</p>
+                    <p class="item-name"><b>Crème brulée</b></p>
+                    <p>Revisitée</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">22€</p>
@@ -167,10 +155,9 @@
                     </div>
                 </div>
                 <div class="menu-item menu-item--9">
-
                     <div class="container-name">
-                        <p class="item-name">Mousse au chocolat </p>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
+                    <p class="item-name"><b>Tiramisu</b></p>
+                    <p>À la noisette</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
@@ -185,7 +172,7 @@
         </div>
     </main>
     <footer>
-        <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
+        <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
