--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="menu-header">
         <div id="header-logo">
-        <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+        <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
         </div>
         </div>
     </header>
@@ -78,7 +78,7 @@
                 <a href="menu1.html">
                 <div class="resto-card">
                     <div class="card-img-div">
-                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                     </div>
                     <div class="textcontainer">
                     <p><b>La palette du goût</b></p>
@@ -96,7 +96,7 @@
                 <a href="menu2.html">
                 <div class="resto-card">
                     <div class="card-img-div">
-                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
+                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                     </div>
                     <div class="textcontainer">
                     <p><b>La note enchantée</b></p>
@@ -114,7 +114,7 @@
                 <a href="menu3.html">
                 <div class="resto-card">
                     <div class="card-img-div">
-                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                     </div>
                     <div class="textcontainer">
                     <p><b>À la française</b></p>
@@ -132,7 +132,7 @@
                 <a href="menu4.html">
                 <div class="resto-card">
                     <div class="card-img-div">
-                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                     </div>
                     <div class="textcontainer">
                     <p><b>Le délice des sens</b></p>
@@ -152,7 +152,7 @@
     </main>
 
     <footer>
-        <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
+        <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
