--- a/pages/menu1.html
+++ b/pages/menu1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
@@ -7,30 +8,32 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - La note enchantée</title>
+    <title>OhMyFood - La palette du goût</title>
 </head>
+
 <body>
     <header>
         <div class="menu-header">
-        <a href="index.html">
-            <div class="backarrow">
-                <i class="fa-solid fa-arrow-left"></i>
-            </div>
-        </a>
-        <div id="header-logo">
-            <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
-            </div>
-    </div>
+            <a href="index.html">
+                <div class="backarrow">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+            </a>
+            <div id="header-logo">
+                <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
+                </div>
+        </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
+            <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
-                <h1>La note enchantée</h1>
+                <h1>La palette du goût</h1>
                 <div class="hearts">
                 <div class="heartbase__menu">
                 <i class="fa-regular fa-heart"></i>
@@ -43,13 +46,14 @@
             <div class="menu-section--wrapper">
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
-                <h4>ENTREES</h4>
-                <div id="borderbottom"></div>
+                    <h4>ENTREES</h4>
+                    <div class="borderbottom"></div>
                 </div>
+
                 <div class="menu-item menu-item--1">
                     <div class="container-name">
-                    <p class="item-name"><b>Ravioles de foie gras</b></p>
-                    <p>Accompagnés de leur crème à la truffe</p>
+                        <p class="item-name">Fricassée d'escargot</p>
+                        <p>Au piment d'Espelette </p>
                     </div>
                     <div class="container-price">
                         <p class="prix">25€</p>
@@ -58,10 +62,12 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
+                
                 <div class="menu-item menu-item--2">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Caviar osciètre</b></p>
-                    <p>Sur blini à la farine de blé noir</p>
+                        <p class="item-name">Foie gras de canard mi-cuit</p>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -71,9 +77,10 @@
                     </div>
                 </div>
                 <div class="menu-item menu-item--3">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Homard et espuma de potiron</b></p>
-                    <p>Mariné aux zestes d'orange</p>
+                        <p class="item-name">Oeuf au plat</p>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">20€</p>
@@ -82,28 +89,17 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--4">
-                    <div class="container-name">
-                    <p class="item-name"><b>Foie gras de canard cuit entier</b></p>
-                    <p>Confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
             </div>
             <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
-                <h4>PLATS</h4>
-                <div id="borderbottom"></div>
+                    <h4>PLATS</h4>
+                    <div class="borderbottom"></div>
                 </div>
-                <div class="menu-item menu-item--5">
+                <div class="menu-item menu-item--4">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Noix de coquilles Saint-Jacques</b></p>
-                    <p>Sur lit de purée de céleri-rave</p>
+                        <p class="item-name">Filet de boeuf aux herbes</p>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">40€</p>
@@ -112,10 +108,11 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--6">
+                <div class="menu-item menu-item--5">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Langoustine poêlée</b></p>
-                    <p>Purée de patate douce</p>
+                        <p class="item-name">Parmentier de queue de boeuf</p>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -124,10 +121,11 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--7">
+                <div class="menu-item menu-item--6">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Mijoté de queue de boeuf </b></p>
-                    <p>Et riz sauvage aux zestes de citron</p>
+                        <p class="item-name">Filet de turbot</p>
+                        <p>Aux agrumes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
@@ -139,13 +137,14 @@
             </div>
             <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
-                <h4>DESSERTS</h4>
-                <div id="borderbottom"></div>
+                    <h4>DESSERTS</h4>
+                    <div class="borderbottom"></div>
                 </div>
-                <div class="menu-item menu-item--8">
+                <div class="menu-item menu-item--7">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Macaron noisette et chocolat</b></p>
-                    <p>Glace au caramel brun et sel de Guérande</p>
+                        <p class="item-name">Paris-Brest</p>
+                        <p>Revisité</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">18€</p>
@@ -154,10 +153,11 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--9">
+                <div class="menu-item menu-item--8">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Baba au rhum revisité </b></p>
-                    <p>Avec son coulis de citron</p>
+                        <p class="item-name">Macaron au chocolat d'exception </p>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">22€</p>
@@ -166,10 +166,11 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--10">
+                <div class="menu-item menu-item--9">
+
                     <div class="container-name">
-                    <p class="item-name"><b>Tarte au citron meringuée</b></p>
-                    <p>Déstructurée</p>
+                        <p class="item-name">Mousse au chocolat </p>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
@@ -180,13 +181,11 @@
                 </div>
             </div>
             </div>
-            <div class="btn--wrapper">
             <button class="btn">Commander</button>
-            </div>
         </div>
     </main>
     <footer>
-        <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
+        <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
