--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - </title>
+    <title>OhMyFood - La note enchantée</title>
 </head>
 <body>
     <header>
@@ -20,17 +20,17 @@
             </div>
         </a>
         <div id="header-logo">
-            <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+            <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
             </div>
     </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="Maquettes Ohmyfood\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+        <img src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
-                <h1>Le délice des sens</h1>
+                <h1>La note enchantée</h1>
                 <div class="hearts">
                 <div class="heartbase__menu">
                 <i class="fa-regular fa-heart"></i>
@@ -44,12 +44,12 @@
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
-                <div id="borderbottom"></div>
+                <div class="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--1">
                     <div class="container-name">
-                    <p class="item-name"><b>Tartare de thon</b></p>
-                    <p>Assaisonné au yuzu</p>
+                    <p class="item-name"><b>Ravioles de foie gras</b></p>
+                    <p>Accompagnés de leur crème à la truffe</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">25€</p>
@@ -60,8 +60,8 @@
                 </div>
                 <div class="menu-item menu-item--2">
                     <div class="container-name">
-                    <p class="item-name"><b>Bouchée de homard croustillant </b></p>
-                    <p>Et sa farandole de petits légumes</p>
+                    <p class="item-name"><b>Caviar osciètre</b></p>
+                    <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -72,11 +72,23 @@
                 </div>
                 <div class="menu-item menu-item--3">
                     <div class="container-name">
-                    <p class="item-name"><b>Velouté de cèpes </b></p>
-                    <p>Aux truffes</p>
+                    <p class="item-name"><b>Homard et espuma de potiron</b></p>
+                    <p>Mariné aux zestes d'orange</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">20€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
+                </div>
+                <div class="menu-item menu-item--4">
+                    <div class="container-name">
+                    <p class="item-name"><b>Foie gras de canard cuit entier</b></p>
+                    <p>Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="container-price">
+                        <p class="prix">35€</p>
                     </div>
                     <div class="checkmark">
                         <i class="fa-regular fa-circle-check fa-lg"></i>
@@ -86,12 +98,12 @@
             <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
                 <h4>PLATS</h4>
-                <div id="borderbottom"></div>
+                <div class="borderbottom"></div>
                 </div>
-                <div class="menu-item menu-item--4">
+                <div class="menu-item menu-item--5">
                     <div class="container-name">
-                    <p class="item-name"><b>Poulet rôti aux herbes de Provence</b></p>
-                    <p>Et sa crème de truffe</p>
+                    <p class="item-name"><b>Noix de coquilles Saint-Jacques</b></p>
+                    <p>Sur lit de purée de céleri-rave</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">40€</p>
@@ -100,10 +112,10 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--5">
+                <div class="menu-item menu-item--6">
                     <div class="container-name">
-                    <p class="item-name"><b>Langouste rôtie</b></p>
-                    <p>Et ses légumes de saison</p>
+                    <p class="item-name"><b>Langoustine poêlée</b></p>
+                    <p>Purée de patate douce</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -112,10 +124,10 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--6">
+                <div class="menu-item menu-item--7">
                     <div class="container-name">
-                    <p class="item-name"><b>Côte de boeuf Angus</b></p>
-                    <p>Et sa purée de panais</p>
+                    <p class="item-name"><b>Mijoté de queue de boeuf </b></p>
+                    <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
@@ -128,12 +140,12 @@
             <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
                 <h4>DESSERTS</h4>
-                <div id="borderbottom"></div>
+                <div class="borderbottom"></div>
                 </div>
-                <div class="menu-item menu-item--7">
+                <div class="menu-item menu-item--8">
                     <div class="container-name">
-                    <p class="item-name"><b>Farandole de desserts</b></p>
-                    <p>Du chef</p>
+                    <p class="item-name"><b>Macaron noisette et chocolat</b></p>
+                    <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">18€</p>
@@ -142,10 +154,10 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--8">
+                <div class="menu-item menu-item--9">
                     <div class="container-name">
-                    <p class="item-name"><b>Crème brulée</b></p>
-                    <p>Revisitée</p>
+                    <p class="item-name"><b>Baba au rhum revisité </b></p>
+                    <p>Avec son coulis de citron</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">22€</p>
@@ -154,10 +166,10 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
-                <div class="menu-item menu-item--9">
+                <div class="menu-item menu-item--10">
                     <div class="container-name">
-                    <p class="item-name"><b>Tiramisu</b></p>
-                    <p>À la noisette</p>
+                    <p class="item-name"><b>Tarte au citron meringuée</b></p>
+                    <p>Déstructurée</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
@@ -168,11 +180,13 @@
                 </div>
             </div>
             </div>
+            <div class="btn--wrapper">
             <button class="btn">Commander</button>
+            </div>
         </div>
     </main>
     <footer>
-        <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
+        <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
