--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
             <div id="restaurants">
                 <h2>Restaurants</h2>
                 <div class="restaurants--wrapper">
-                <a href="menu1.html">
+                <a href="pages/menu1.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
@@ -93,7 +93,7 @@
                 </div>
                 </a>
 
-                <a href="menu2.html">
+                <a href="pages/menu2.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
@@ -111,7 +111,7 @@
                 </div>
                 </a>
 
-                <a href="menu3.html">
+                <a href="pages/menu3.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
@@ -129,7 +129,7 @@
                 </div>
                 </a>
 
-                <a href="menu4.html">
+                <a href="pages/menu4.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
