--- a/pages/menu4.html
+++ b/pages/menu4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
@@ -14,19 +14,19 @@
 <body>
     <header>
         <div class="menu-header">
-        <a href="index.html">
+        <a href="../index.html">
             <div class="backarrow">
                 <i class="fa-solid fa-arrow-left"></i>
             </div>
         </a>
         <div id="header-logo">
-            <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
+            <img id="logo" src="../Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
             </div>
     </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Background image">
+        <img src="../Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
@@ -172,7 +172,7 @@
         </div>
     </main>
     <footer>
-        <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
+        <img id="logosmall" src="../Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
